snapshots/parsers/cst/option_statements/option_private_case_insensitive.snap
---
source: src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: OPTION
        - kind: Whitespace
          text: " "
        - kind: PrivateKeyword
          text: PRIVATE
        - kind: Whitespace
          text: " "
        - kind: ModuleKeyword
          text: MODULE
        - kind: Newline
          text: "\n"
